bugfixes for #siteDialogSettings --> works a lot better now.. now has scrollbars too..

--- a/nicerapp/domainConfigs/localhost_v2/index.css
+++ b/nicerapp/domainConfigs/localhost_v2/index.css
@@ -287,7 +287,7 @@ img.bg_last {
 }
 .flexBreak {
     flex-basis : 100%;
-    height : 0;
+    height : 5px; width:5px;
 }
 
 
@@ -627,6 +627,10 @@ select, optgroup {
     width : 50px;
     height : 50px;
 }    
+#boxShadow img, #textShadow img {
+    width : 50px;
+    height : 50px;
+}
 
 .cvbBorderCSS {
     position : absolute;
@@ -667,11 +671,10 @@ label {
 }
 .flexColumns {
     display : flex;
-    position : absolute;
-    top : 75px;
 }
 .labelDialogSettings2 {
     display : inline-flex;
+    position : relative;
 }
 
 
